2020-08-31  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-fourier.tex,
	* Makefile: generate files for Fourier fonts.
	https://github.com/michal-h21/make4ht/issues/35

2020-08-27  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathml.tex (mathml.4ht): use some code from mathml- option by
	default.
	https://github.com/michal-h21/make4ht/issues/34
	https://puszcza.gnu.org.ua/bugs/?278

2020-08-19  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathml.tex (mathml.4ht): fixed fence rendering in MathML.
	https://puszcza.gnu.org.ua/bugs/?481

2020-07-30  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathjax.tex (mathjax-latex-4ht.4ht): remove spurious colon.
	https://tex.stackexchange.com/a/555755/2891
	https://puszcza.gnu.org.ua/bugs/?479

2020-07-28  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-sty.tex (tex4ht.sty),
	* tex4ht-4ht.tex (latex.4ht),
	* Makefile: use new LaTeX hook system for patching \begin{document}
	when possible.
	https://puszcza.gnu.org.ua/bugs/?477#postcomment
	
2020-07-27  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-sty.tex (tex4ht.sty): don't patch \shipout command.
	https://listserv.uni-heidelberg.de/cgi-bin/wa?A2=LATEX-L;d8558dd0.2007&S=

2020-07-26  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathjax.tex (mathjax-latex-4ht.4ht),
	* tex4ht-html4.tex (html4-math.4ht): added MathJaxConfig configuration.
	https://github.com/michal-h21/make4ht/issues/33

2020-07-26  Karl Berry  <karl@freefriends.org>

	* Makefile (diff-htfonts): rename from diff-ht-fonts, and also
	generate /tmp/htnew for new files. Other small name changes.

2020-07-25  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-newtx.tex,
	* Makefile: generate files for Newtx fonts
	https://puszcza.gnu.org.ua/bugs/index.php?236#postcomment

2020-07-18  Karl Berry  <karl@freefriends.org>

	* Makefile (update):  missing ) on "$(dest_src/", causing 
	"unterminated variable reference".
	(destdir): change to update.dir from .., to make it clearer