@@ -1,6 +1,9 @@
-%       tex {nameofthefile.tex}
+% $Id$
+% tex {nameofthefile.tex}
 %
-% Copyright (C) 2018 TeX Users Group
+% Copyright 2020 TeX Users Group.
+% Released under LPPL 1.3c+.
+% See tex4ht-cpright.tex for license text.
 
 \input tex4ht.sty    
    \Preamble{xhtml,th4,sections+}
