@@ -43293,7 +43293,7 @@ bchr8t 0 255
 
 \<bchb8t\><<<
 .bchr8t      
-htfcss: bchb8t  font-weight: bold;
+htfcss: bchb8t font-weight: bold;
 >>>
 \AddFont{bchb8t}{alias/bitstrea/charter/bchb8t}
 
