@@ -1,3 +1,9 @@
+2020-08-31  Karl Berry  <karl@freefriends.org>
+
+	* tex4ht-fonts-noncjk.tex (bchb8t): remove spurious Unicode in
+	htfcss line.
+	* tex4ht-fonts-fourier.tex: license, copyright year.
+
 2020-08-31  Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-fonts-fourier.tex,
